# scoreboard-v2-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build_windows_release.sh  docker-build-win.sh  dummy.rs
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Modal/: Modal.css  Modal.tsx  ModalContext.tsx
frontend/src/Scoreboard/: ScoreboardDisplay.tsx  ScoreboardForm.tsx  ScoreboardWrapper.tsx
frontend/src/View/: View.tsx
src/: main.rs
