[package]
name = "scoreboard-v2-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scoreboard-v2-rust"
path = "src/main.rs"

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
futures-util = "0.3.30"
include_dir = "0.7.4"
mime_guess = "2.0.5"

[profile.release]
strip = true

[features]
cache_frontend = []